--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,12 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6{
 	font-family: 'Roboto Condensed', sans-serif;
 }
 
+h2{
+	font-family: 'Roboto Condensed', sans-serif;
+	font-weight: normal;;
+	line-height: 1.5em;
+}
+
 p{
 	font-size: 1.2em;
 }
@@ -123,7 +129,7 @@ nav.navbar.fixed-to-top{
 }
 
 .navbar-default .navbar-nav>li>a {
-	color: #aaa;
+	color: white;
 	font-size: 1.2em;
 	
 	margin-top: 0.8em;
@@ -371,7 +377,7 @@ header .carousel-indicators li {
 	overflow: hidden;
 	padding: 230px 0px 150px 0px;
 	min-height: 600px;
-	background: url('../img/dunes.jpg');
+	background: url('../img/jeep-forest.jpeg');
 	background-position: center top;
 	background-repeat: repeat-x;
 }
@@ -426,7 +432,7 @@ header .carousel-indicators li {
 	margin-left: auto;
 	padding-top: 95px;
 	width: 320px;
-	height: 450px;
+	height: 600px;
 	background: url('../img/screenshots/phone-frame.png') no-repeat;
 	background-size: 100%;
 }
@@ -472,6 +478,11 @@ header .carousel-indicators li {
 	cursor: pointer;
 }
 
+
+.detail .item{
+	padding-top:5em;
+	padding-bottom: 5em;
+}
 /*-----------------------------------------------------------------------------------*/
 /*	FEATURES
 /*-----------------------------------------------------------------------------------*/
@@ -722,5 +733,28 @@ header, .social{
 }
 
 .text-center{
-	text-align: center;
+	text-align: center !important;
+}
+
+
+.white{
+	color:white!important;
+}
+
+.red{
+	color:#d32f2f !important;	
+}
+
+.padding{
+	padding-top:2em;
+	padding-bottom: 2em;
+}
+
+.padding-side{
+	padding-right:20%;
+	padding-left: 20%;
+}
+
+.secondary-features{
+	padding: 8em 0;
 }
