--- a/css/style.css
+++ b/css/style.css
@@ -227,7 +227,10 @@ nav.navbar.fixed-to-top{
     cursor: pointer;
 }
 
-.progress-nav ul li a:hover {
+.progress-nav ul li a:focus {
+	text-decoration: none;
+}
+.progress-nav ul li a:hover, .progress-nav ul li.active a {
 	text-decoration: none;
 	color: #f02f2f;
 }
@@ -246,6 +249,7 @@ nav.navbar.fixed-to-top{
     transition: 0.1s;
 }
 
+.progress-nav ul li.active a::before,
 .progress-nav ul li a:hover::before {
     top: calc(-8px - 4px);
     left: calc(50% - 4px);
@@ -254,6 +258,7 @@ nav.navbar.fixed-to-top{
     background: rgba(240, 47, 47, 0.5);
 }
 
+.progress-nav ul li.active a::after,
 .progress-nav ul li a:hover::after {
     background: rgba(240, 47, 47, 1);
 }
