added content on process

--- a/css/style.css
+++ b/css/style.css
@@ -761,6 +761,11 @@ header, .social{
 	padding-bottom: 2em;
 }
 
+.padding-section{
+	padding-top:6em;
+	padding-bottom: 6em;
+}
+
 .padding-side{
 	padding-right:20%;
 	padding-left: 20%;
@@ -769,3 +774,27 @@ header, .social{
 .secondary-features{
 	padding: 8em 0;
 }
+
+.shadow{
+	box-shadow: 0px 2px 9px 0px rgba(166,166,166,0.50);
+}
+
+
+
+.domain{
+	padding: 150px 0px 0px 0px;
+	height: 600px;
+	background: url('../img/domain.jpg');
+	background-color: white!important;
+	background-size: cover;
+	background-repeat: no-repeat;
+	color: white;
+}
+
+.domain h3, .domain h1{
+	color:white;
+}
+
+
+
+
